vlib/v/checker/tests/unimplemented_interface_d.vv
interface Animal {
	speak(s string)
}

struct Cat {}

fn (_ Cat) speak() {}

fn foo(_ Animal) {}

fn main() {
	foo(Cat{})
}
